# codesysAPItest

./: .gitignore  .mcp.json  AGENTS.md  README.md  codesys_mcp_capability_mapping.md  latest  prompt.md  prompt_lite.md  pyproject.toml
.claude/: settings.json
docs/: README.md  claude_code_connection.md  claude_code_troubleshooting.md  client_workflows.md  codex_client_handbook.md  current_phase_plan.md  git_workflow.md  mcp_client_connection.md
docs/api_specs/: README.md  local_server_and_sdk.md  mcp_tools_phase1.md  tool_catalog.md
docs/architecture/: repository_structure.md  server_assembly.md
docs/research/: README.md  sp20_automation_blocker.md
examples/: README.md
scripts/: README.md  codesys_smoke_test.py  create_project_with_controller.py  find_device_description.py  inspect_device_description.py  inspect_device_info_tmp.py  start_mcp_server.ps1  sync_tool_docs.py
src/codesys_client_sdk/: __init__.py
src/codesys_mcp_server/: __init__.py
tests/: README.md
tests/integration/: test_manual_real_codesys_pou_adapter.py  test_manual_real_mcp_server_runtime.py  test_real_codesys_project_adapter.py
tests/unit/: test_add_controller_device.py  test_create_function.py  test_create_function_block.py  test_create_program.py  test_create_project.py  test_find_project_objects.py  test_in_memory_backend.py  test_list_project_objects.py  test_local_client.py  test_open_project.py  test_pou_transactions.py  test_save_project.py  test_scan_network_devices.py  test_server_application.py  test_server_cli.py  test_server_config_logging.py  test_server_runtime.py  (+3 more)
(+53 files in other folders)
