[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codesys-api-test"
version = "0.1.0"
description = "Python MCP Server and client SDK for CODESYS Scripting API integration."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
codesys-mcp-local = "codesys_mcp_server.server.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
